--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,15 @@ version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/jobs-steps/#jobs-overview & https://circleci.com/docs/configuration-reference/#jobs
 jobs:
+  spell-check:
+    docker:
+      - image: cimg/rust:1.74.0
+    steps:
+      - run:
+          name: Build
+          command: |
+            cargo install typos-cli
+            typos
   test:
     # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/executor-intro/ & https://circleci.com/docs/configuration-reference/#executor-job
@@ -50,6 +59,7 @@ jobs:
 workflows:
   example:
     jobs:
+      - spell-check
       - test
       - build:
           requires:
