--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,11 +12,9 @@ jobs:
     docker:
       - image: cimg/rust:1.75.0
     steps:
-      - run:
-          name: Build
-          command: |
-            cargo install typos-cli
-            typos
+      - run: |
+        cargo install typos-cli
+        typos
   test:
     # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/executor-intro/ & https://circleci.com/docs/configuration-reference/#executor-job
