--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,8 @@ jobs:
     docker:
       - image: cimg/rust:1.75.0
     steps:
-      - run: |
-        cargo install typos-cli
-        typos
+      - run: cargo install typos-cli
+      - run: typos
   test:
     # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/executor-intro/ & https://circleci.com/docs/configuration-reference/#executor-job
