--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,63 +8,65 @@ version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/jobs-steps/#jobs-overview & https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  spell-check:
+  build-and-test:
+    parameters:
+      cargo_cache_key:
+        type: string
     docker:
       - image: cimg/rust:1.74.0
+    resource_class: xlarge
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - << parameters.cargo_cache_key >>
+      - run:
+          # this step doesn't need to be cached, it's relatively fast (15s on Docker/X-Large)
+          name: Install nightly
+          command: rustup install nightly
+      - run:
+          name: Install foundry
+          command: ./scripts/install_foundry.sh
+      - run:
+          name: Build
+          command: cargo build --release
+      - run:
+          name: Clippy check
+          command: ./scripts/clippy_check.sh
+      - run:
+          name: Format check
+          command: cargo +nightly fmt --all --check
+      - save_cache:
+          # Caching dependencies for future use
+          # Build and Clippy steps generate their own target artifacts
+          # Test also generates, but significantly more
+          # Compromise: saving before Test
+          paths:
+            - /home/circleci/.cargo/registry
+            - target/debug/.fingerprint
+            - target/debug/build
+            - target/debug/deps
+            - target/release/.fingerprint
+            - target/release/build
+            - target/release/deps
+          key: << parameters.cargo_cache_key >>
+  spell-check:
+    docker:
+      - image: cimg/rust:1.75.0
     steps:
       # Checkout the code as the first step.
       - checkout
       # Install typos-cli
-      - run: cargo install typos-cli@1.16.25
+      #- run: cargo install typos-cli@1.16.25
+      - run: cargo install typos-cli
       # Run code spell check
       - run: typos
-  test:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/executor-intro/ & https://circleci.com/docs/configuration-reference/#executor-job
-    docker:
-      # Specify the version you desire here
-      # See: https://circleci.com/developer/images/image/cimg/base
-      - image: cimg/base:current
-
-    # Add steps to the job
-    # See: https://circleci.com/docs/jobs-steps/#steps-overview & https://circleci.com/docs/configuration-reference/#steps
-    steps:
-      # Checkout the code as the first step.
-      - checkout
-      # Replace this with a real test runner invocation
-      - run:
-          name: Run tests
-          command: echo 'replace me with real tests!' && true
-  build:
-    docker:
-      - image: cimg/base:current
-    steps:
-      - checkout
-      # Replace this with steps to build a package, or executable
-      - run:
-          name: Build an artifact
-          command: touch example.txt
-      - store_artifacts:
-          path: example.txt
-  deploy:
-    docker:
-      - image: cimg/base:current
-    steps:
-      # Replace this with steps to deploy to users
-      - run:
-          name: deploy
-          command: "#e.g. ./deploy.sh"
 
 # Orchestrate jobs using workflows
 # See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
 workflows:
   example:
     jobs:
+      - build-and-test:
+          cargo_cache_key: cargo-cache-{{ checksum "Cargo.lock" }}-{{ checksum "rust-toolchain.toml" }}-v1
       - spell-check
-      - test
-      - build:
-          requires:
-            - test
-      - deploy:
-          requires:
-            - test
