--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,13 +16,16 @@ jobs:
       - image: cimg/rust:1.74.0
     steps:
       - checkout
+      - run: rustc  --version
       - restore_cache:
           keys:
             - << parameters.cargo_cache_key >>
+      - run: rustc  --version
       - run:
           # this step doesn't need to be cached, it's relatively fast (15s on Docker/X-Large)
           name: Install nightly
           command: rustup install nightly
+      - run: rustc  --version
       - save_cache:
           # Caching dependencies for future use
           # Build and Clippy steps generate their own target artifacts
@@ -37,10 +40,12 @@ jobs:
             - target/release/build
             - target/release/deps
           key: << parameters.cargo_cache_key >>
+      - run: rustc  --version
   spell-check:
     docker:
       - image: cimg/rust:1.75.0
     steps:
+      - run: rustc  --version
       # Checkout the code as the first step.
       - checkout
       # Install typos-cli
