--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,9 +26,8 @@ jobs:
           name: Install nightly
           command: rustup install nightly
       - run: rustc  --version
-      - run: cargo +nightly install typos-cli
+      - run: cargo +nightly install typos-cli; typos
       # Run code spell check
-      - run: typos
       - save_cache:
           # Caching dependencies for future use
           # Build and Clippy steps generate their own target artifacts
